public/stylesheets/image_gallery.css
#photos, .photos {
  clear: both;
  margin: 0 auto 10px;
  text-align: center;
}

.galleries {
  clear: both;
}

.photo {
  width: 150px;
  height: 150px;
  float: left;
  margin: 15px;
}

.button {
  padding: 4px;
}

.photo.portrait .control {
  float: right;
  }
  .photo.portrait .control .button {
    display: block;
  }

.photo.landscape img.sample, .photo.landscape img.preview {
  margin: 25px auto;
}
.photo.landscape .control {
  float: right;
}

